--- a/html/Omelette/Omelette.html
+++ b/html/Omelette/Omelette.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="../css/pagecopy.css">
+  <link rel="stylesheet" href="../../css/Omelette.css">
+  <link rel="icon" href="./favicon.ico">
 </head>
 
 <body>
@@ -13,7 +14,7 @@
     <div class="container">
       <div class="card">
         <div class="img">
-          <img src="./pagecopy/images/image-omelette.jpeg" alt="" id="img">
+          <img src="./Omelette/images/image-omelette.jpeg" alt="" id="img">
         </div>
         <div class="title">
           <h1>Simple Omelette Recipe</h1>
