--- a/html/login-form/index.html
+++ b/html/login-form/index.html
@@ -1,34 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="/css/login_form.css">
   <title>Frontend Mentor | Social links profile</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+
 </head>
+
 <body>
+  <div class="warrap">
+    <div class="backG">
+      <div class="card">
+        <div>
+          <img src="../login-form/assets/images/avatar-jessica.jpeg" alt="" class="img">
+        </div>
+        <div class="name">
+          Jessica Randall
+          <p>
+            London, United Kingdom
+          </p>
+        </div>
+        <div class="sp">
+          <span>
+            "Front-end developer and avid reader."
+          </span>
+        </div>
+        <div>
+          <div><button class="btn">GitHub</button></div>
+          <div><button class="btn">Frontend Mentor</button></div>
+          <div><button class="btn">LinkedIn</button></div>
+          <div><button class="btn">Twitter</button></div>
+          <div><button class="btn">Instagram</button></div>
+        </div>
+      </div>
+    </div>
+  </div>
 
-  Jessica Randall
-  London, United Kingdom
-  "Front-end developer and avid reader."
 
-  GitHub
-  Frontend Mentor
-  LinkedIn
-  Twitter
-  Instagram
-  
+
+
+
+
+
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
   </div>
 </body>
+
 </html>
